# whiterate

./: netztest-opendata_hours-048.csv
gnuradio_patch/gr-trellis/src/lib/: Makefile.am  Makefile.gen  generate_trellis.py  gr_ofdm_constants.h  trellis.i  trellis_calc_metric.cc  trellis_depuncturing.cc  trellis_depuncturing.h  trellis_depuncturing.i  trellis_framed_encoder_XX.cc.t  trellis_framed_encoder_XX.h.t  trellis_framed_encoder_c.cc  trellis_framed_encoder_c.h  trellis_framed_encoder_c.i  trellis_framed_encoder_f.cc  trellis_framed_encoder_f.h  trellis_metric_type.h  (+59 more)
installation/white_rate_final/: AUTHORS  ChangeLog  Makefile.in  README  configure  configure.ac  veljko.sh
installation/white_rate_final/autom4te.cache/: output.1  traces.0  traces.1
installation/white_rate_final/src/: Makefile.am  Makefile.am~  Makefile.in
installation/white_rate_final/src/flex/: Makefile.am  Makefile.in  Makefile.swig.gen  flex.i  flex_base.cc  flex_base.h  flex_coded_ofdm_demod.cc  flex_coded_ofdm_demod.h  flex_coded_ofdm_demod2softin.cc  flex_coded_ofdm_demod2softin.h  flex_framed_message_sink.cc  flex_framed_message_sink.h  flex_framed_message_source.cc  flex_framed_message_source.h  flex_fsm.cc  flex_fsm.h  flex_null_mux.cc  flex_null_mux.h  flex_ofdm_constants.h  flex_ofdm_cyclic_prefixer.cc  flex_ofdm_cyclic_prefixer.h  flex_ofdm_deinterleaver.cc  flex_ofdm_deinterleaver.h  flex_ofdm_frame_acquisition.cc  flex_ofdm_frame_acquisition.h  flex_ofdm_header_decode_vbb.cc  flex_ofdm_header_decode_vbb.h  flex_ofdm_insert_preamble.cc  flex_ofdm_insert_preamble.h  flex_ofdm_interleaver.cc  flex_ofdm_interleaver.h  flex_ofdm_mapper_bcv.cc  flex_ofdm_mapper_bcv.h  flex_ofdm_mapper_flow.cc  flex_ofdm_mapper_flow.h  flex_ofdm_sampler.cc  flex_ofdm_sampler.h  flex_ofdm_struct_dot11a.h  flex_peak_detector_fb.cc  flex_peak_detector_fb.h  (+2 more)
simulator/: calc_clients.py  packet_table.py  samplerate.py  simulator.py  whiterate.py
simulator/Pretoria/: 174_030_new.txt  174_050_new.txt  174_080_new.txt  174_090_new.txt  174_100_new.txt  222_030_new.txt  222_050_new.txt  222_080_new.txt  222_090_new.txt  222_100_new.txt  270_030_new.txt  270_050_new.txt  270_080_new.txt  270_090_new.txt  270_100_new.txt  318_030_new.txt  318_050_new.txt  318_080_new.txt  318_090_new.txt  318_100_new.txt  366_030_new.txt  366_050_new.txt  366_080_new.txt  366_090_new.txt  366_100_new.txt  414_030_new.txt  414_050_new.txt  414_080_new.txt  414_090_new.txt  414_100_new.txt  462_030_new.txt  462_050_new.txt  462_080_new.txt  462_090_new.txt  462_100_new.txt
simulator/Repo/: README.txt
simulator/UCSB/: 174_001_new.txt  174_003_new.txt  174_005_new.txt  174_010_new.txt  174_020_new.txt  174_030_new.txt  174_050_new.txt  222_001_new.txt  222_003_new.txt  222_005_new.txt  222_010_new.txt  222_020_new.txt  222_030_new.txt  222_050_new.txt  270_001_new.txt  270_003_new.txt  270_005_new.txt  270_010_new.txt  270_020_new.txt  270_030_new.txt  270_050_new.txt  318_001_new.txt  318_003_new.txt  318_005_new.txt  318_010_new.txt  318_020_new.txt  318_030_new.txt  318_050_new.txt  366_001_new.txt  366_003_new.txt  366_005_new.txt  366_010_new.txt  366_020_new.txt  366_030_new.txt  366_050_new.txt  414_001_new.txt  414_003_new.txt  414_005_new.txt  414_010_new.txt  414_020_new.txt  (+9 more)
(+54 files in other folders)
